# Rong-E

./: .gitignore  CLAUDE.md  README.md  agent.py  google_service.py  server_logs.txt  tools.py
agent/: __init__.py  agent.py  build_agent.py  main.py  requirements.txt  rong-e_agent.spec  ronge_agent.spec  server.py  temp.py  tools.py
agent_server/: Cargo.toml  all_contents.txt  temp.sh
agent_server/prompts/: google_agent_prompt.txt  system_prompt.txt
agent_server/src/: google_agent.rs  google_auth.rs  google_tools.rs  graph_memory.rs  llm.rs  logic.rs  main.rs  mcp_proxy.rs  openrouter_auth.rs  routes.rs  state.rs  tools.rs
backend/: agent.py  file_utils.py  google_service.py  memory.py  mode_mode3_prompt.txt  plan_prompt.txt  rag.py  requirements.txt  server.py  system_prompt.txt  tools.py  utils.py
swift-ui/: AppContext-2.d  AppContext-2.swiftdeps  AppContext-2.swiftmodule  Constants-2.d  Constants-2.swiftdeps  Constants-2.swiftmodule  GoogleAuthManager-2.d  GoogleAuthManager-2.swiftdeps  GoogleAuthManager-2.swiftmodule  JarvisDesignSystem-2.d  JarvisDesignSystem-2.swiftdeps  JarvisDesignSystem-2.swiftmodule  MCPConfig-2.d  MCPConfig-2.swiftdeps  MCPConfig-2.swiftmodule  OverlayManager-2.d  OverlayManager-2.swiftdeps  OverlayManager-2.swiftmodule  Package.swift  RongEApp-2.d  RongEApp-2.swiftdeps  RongEApp-2.swiftmodule  RongESocketClient-2.d  RongESocketClient-2.swiftdeps  RongESocketClient-2.swiftmodule  ScreenshotManager-2.d  ScreenshotManager-2.swiftdeps  ScreenshotManager-2.swiftmodule  ServerManager-2.d  ServerManager-2.swiftdeps  SpreadsheetConfig-2.d  (+6 more)
(+114 files in other folders)
