[package]
name = "agent_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace", "cors"] }
rig-core = { version = "0.31.0", features = ["rmcp"] }
futures = "0.3.32"
base64 = "0.22"
rmcp = { version = "0.13", features = ["client", "server", "transport-child-process"] }
thiserror = "2"
libc = "0.2"
chrono = "0.4"
dirs = "6"
reqwest = { version = "0.13", features = ["json", "form"] }
urlencoding = "2"
